# pi_tracker

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  markers.rviz  package.xml  tracker_rviz.vcg
doc/: wiki.txt
launch/: dynamixels.launch  skeleton.launch  track_joint.launch  tracker.launch
nodes/: pi_tracker_lib.py  tracker_base_controller.py  tracker_command.py  tracker_joint_controller.py
params/: SamplesConfig.xml  arbotix_params.yaml  dynamixels_params.yaml  tracker_params.yaml
src/: skeleton_tracker.cpp
urdf/: pi_robot.urdf.xacro
urdf/pi_robot/: dynamixel_arm_hardware.xacro  dynamixel_head_hardware.xacro  kinect.urdf.xacro  phantomx_gripper.urdf.xacro  pi_arm.urdf.xacro  pi_arm_no_gripper.urdf.xacro  pi_arm_paddle_hand.urdf.xacro  pi_gripper.urdf.xacro  pi_pan_tilt_head.urdf.xacro  pi_pan_tilt_head_xtion.urdf.xacro  pi_robot_with_pan_tilt_head.xacro  pi_robot_with_two_arms.xacro  pi_tele_torso.urdf.xacro  pi_torso.urdf.xacro  xtion.urdf.xacro
